@@ -55,7 +55,7 @@
      <dependency>
 	   <groupId>name.richardson.james.bukkit</groupId>
 	   <artifactId>bukkit-utilities</artifactId>
-	   <version>4.0.0-SNAPSHOT</version>
+	   <version>4.0.1-SNAPSHOT</version>
      </dependency>
   </dependencies>
 
